--- a/src/app/components/main-menu/main-menu.component.html
+++ b/src/app/components/main-menu/main-menu.component.html
@@ -1,2 +1,36 @@
-<app-navbar *ngIf="!this.isMinWidth"></app-navbar>
-<app-sidenav *ngIf="this.isMinWidth"></app-sidenav>
+<nav class="my-navbar-container">
+	<div class="my-navbar">
+		<a class="my-navbar-logo" [routerLink]="'.'">Antony Seas</a>
+
+		<div class="my-nav-menu-container">
+			<button *ngIf="this.isMinWidth" class="my-nav-menu-toggle" (click)="this.toggleMenuCollapse()">
+				<mat-icon [ngClass]="'my-toggle-menu-icon'">menu</mat-icon>
+			</button>
+			<div class="my-nav-menu" [ngClass]="{'my-sidebar-mode': this.isMinWidth, 'my-navbar-mode': !this.isMinWidth, 
+			'hide':this.isMenuCollapsed && this.isMinWidth}">
+				<ul class="my-nav-options-container">
+
+					<li class="my-nav-option">
+						<a class="my-nav-link" [routerLink]="'.'">
+							<mat-icon [ngClass]="'my-nav-icon'">list</mat-icon>
+							{{'nav-option-projects' | translate}}
+						</a>
+					</li>
+					<li class="my-nav-option">
+						<a class="my-nav-link" [routerLink]="'.'">
+							<mat-icon [ngClass]="'my-nav-icon'">mail</mat-icon>
+							{{'nav-option-contact' | translate}}
+						</a>
+					</li>
+					<li class="my-nav-option">
+						<a class="my-nav-link" [routerLink]="'.'">
+							<mat-icon [ngClass]="'my-nav-icon'">info</mat-icon>
+							{{'nav-option-about' | translate}}
+						</a>
+					</li>
+
+				</ul>
+			</div>
+		</div>
+	</div>
+</nav>
