--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 :root {
     --bg-main-color: #0a192f;
-    --bg-secondary-color: #172a45;
+    --bg-secondary-color: #173045;
     --bg-navbar-color: #0a192f;
     --font-main-color: #ccd6f6;
     --decoration-color: #64ffda;
